# hass-nature-remo

./: LICENSE  README.md  __init__.py  climate.py  hacs.json  manifest.json  pyproject.toml  sensor.py  skills-lock.json
.github/workflows/: ci.yml  release.yml
custom_components/nature_remo/: __init__.py  climate.py  config_flow.py  echonet.py  light.py  manifest.json  media_player.py  sensor.py  switch.py
custom_components/nature_remo/translations/: en.json  ja.json
tests/: conftest.py  test_api.py  test_climate.py  test_echonet.py  test_sensor_entities.py  test_switch_light_media_player.py  test_translations.py
translations/: zh-Hant.json
