[project]
name = "hass_nature_remo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "homeassistant>=2026.5.3",
    "voluptuous>=0.15.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]


[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
# addopts = "--base-url http://0.0.0.0:5001"  # Commented out - requires pytest-base-url plugin
